k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
